Fixed end game button bug which wasn't working because of the transparent image overflowing it. Works now on small screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -484,12 +484,21 @@ h3 {
   color: whitesmoke;
 }
 
-.finalScreen h2, .btn {
+.finalScreen h2 {
   font-size: 25px;
+  
 }
 
-.finalScreen .isabelle{
-  margin-top: -100px;
+  .isabelle{
+  margin-top: -50px;
+  position: absolute;
+  z-index: 0;
+  
+}
+
+.finalScreen .btn {
+  position: absolute;
+  z-index: 1;
 }
 }
 
@@ -518,9 +527,13 @@ h3 {
     height: 100vh;
   } 
 
-  finalScreen .isabelle{
+  /* .finalScreen .isabelle{
     height: 300px;
-  }
+  } */
+
+  
+
+  
 
 
 } 
